@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006, 2007, 2008, 2010, 2011, 2013, 2014, 2015, 2016, 2018 XStream Committers.
+ * Copyright (C) 2006, 2007, 2008, 2010, 2011, 2013, 2014, 2015, 2016, 2018, 2020 XStream Committers.
  * All rights reserved.
  *
  * The software in this package is published under the terms of the BSD
@@ -301,19 +301,19 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
             final Class<?> type = parameterTypes[i];
             if (type.isPrimitive()) {
                 if (type == byte.class) {
-                    arguments[i] = new Byte((byte)0);
+                    arguments[i] = Byte.valueOf((byte)0);
                 } else if (type == short.class) {
-                    arguments[i] = new Short((short)0);
+                    arguments[i] = Short.valueOf((short)0);
                 } else if (type == int.class) {
-                    arguments[i] = new Integer(0);
+                    arguments[i] = Integer.valueOf(0);
                 } else if (type == long.class) {
-                    arguments[i] = new Long(0);
+                    arguments[i] = Long.valueOf(0);
                 } else if (type == float.class) {
-                    arguments[i] = new Float(0);
+                    arguments[i] = Float.valueOf(0);
                 } else if (type == double.class) {
-                    arguments[i] = new Double(0);
+                    arguments[i] = Double.valueOf(0);
                 } else if (type == char.class) {
-                    arguments[i] = new Character('\0');
+                    arguments[i] = Character.valueOf('\0');
                 } else {
                     arguments[i] = Boolean.FALSE;
                 }
