@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2003, 2004, 2005, 2006 Joe Walnes.
- * Copyright (C) 2006, 2007, 2008, 2009, 2010, 2011, 2017, 2018 XStream Committers.
+ * Copyright (C) 2006, 2007, 2008, 2009, 2010, 2011, 2017, 2018, 2019, 2021 XStream Committers.
  * All rights reserved.
  *
  * The software in this package is published under the terms of the BSD
@@ -74,7 +74,7 @@ public class CollectionsTest extends AbstractAcceptanceTest {
     public void testListsCanContainBasicObjects() {
         final SampleLists<Object, ?> lists = new SampleLists<>();
         lists.good.add("hello");
-        lists.good.add(new Integer(3));
+        lists.good.add(Integer.valueOf(3));
         lists.good.add(Boolean.TRUE);
 
         xstream.alias("lists", SampleLists.class);
@@ -188,10 +188,12 @@ public class CollectionsTest extends AbstractAcceptanceTest {
 
     public void testEmptyList() {
         assertBothWays(Collections.EMPTY_LIST, "<empty-list/>");
+        assertBothWays(Collections.emptyList(), "<empty-list/>");
     }
 
     public void testEmptySet() {
         assertBothWays(Collections.EMPTY_SET, "<empty-set/>");
+        assertBothWays(Collections.emptySet(), "<empty-set/>");
     }
 
     public void testEmptyListIsImmutable() {
@@ -294,7 +296,7 @@ public class CollectionsTest extends AbstractAcceptanceTest {
     }
 
     public void testListFromArrayAsList() {
-        final List<String> list = Arrays.asList(new String[]{"hi", "bye"});
+        final List<String> list = Arrays.asList("hi", "bye");
 
         assertBothWays(list, ""//
             + "<java.util.Arrays_-ArrayList>\n"
